--- a/index.html
+++ b/index.html
@@ -6,6 +6,19 @@
     <title> My First Page</title>
 </head>
 <body>
-<h1>Some text</h1>
+
+
+<form method="post" action="/">
+    {% if p_list %}
+        {% for p_name, p_city in p_list %}
+        {% if p_city == city %}
+            <p>{{p_name}} {{p_city}}</p>
+            {% endif %}    
+           {% endfor %}
+        {% else %}
+           <h2>The list of participants has not been sent</h2>
+        {% endif %}
+
+
 </body>
 </html>
